--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,5 @@
-body
-{
-	color: #333;
+body {
+	color: blue;
 	text-align: center;
 	font-family: Arial;
 	font-size: 16px;
@@ -23,8 +22,7 @@ body
 	font-size: 0.8em;
 }
 
-#container
-{
+#container {
 	width: 70%;
 	padding: 0;
 	text-align: left;
@@ -32,8 +30,7 @@ body
 	margin: 0 auto
 }
 
-#container h1
-{
+#container h1 {
 	font-size: 20px;
 }
 
